syntax = "proto3";

option csharp_namespace = "AuthService";

package auth;

service AuthService {
	rpc SignIn (SignInRequest) returns(SignInResponse);
	rpc SignUp (SignUpRequest) returns(SignUpResponse);
}

message SignInRequest {
	string username = 1;
	string password = 2;
}

message SignInResponse {
	string user_id = 1;
}

message SignUpRequest {
	string username = 1;
	string password = 2;
}

message SignUpResponse {
	bool status = 1;
}